[package]
name = "ws2812-blocking-spi"
version = "0.1.0"
edition = "2021"
authors = ["Andrei Litvin <andy314@gmail.com>"]
categories = [
    "embedded",
    "no-std",
    "hardware-support"
]
keywords = [
    "neopixel",
    "ws2812"
]
license = "Apache-2.0 OR MIT"
readme = "README.md"
description = "Driver based on embedded_hal::blocking::spi::Write for WS2812"
repository = "https://github.com/andy31415/ws2812-blocking-spi-rs"

[dependencies]
smart-leds-trait = "0.2.0"
embedded-hal = "0.2.4"

# CodeGen macros
ws2812-spi-write-constants = { path = "ws2812-spi-write-constants", version="0.1.0" }
