[package]
name = "stm32f0-rainbow-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.3.3"
rtt-target = {version = "0.3.1", features=["cortex-m"]}
panic-rtt-target = {version = "0.1.2", features=["cortex-m"]}
stm32f0xx-hal = { version = "0.18", features = ["stm32f030x8"]}
embedded-hal = "0.2.7"
smart-leds = "0.3.0"
ws2812-blocking-spi = { path="../.." }

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations


[[bin]]
name = "rainbow"
test = false
bench = false
